--- a/Final-Report/background.tex
+++ b/Final-Report/background.tex
@@ -44,17 +44,17 @@ Since MRI, like US, is a non-invasive procedure that doesn’t use ionizing radi
 There are no known side effects associated with using MRI, however it is currently recommended to wait until the 17th or 18th WG (week of gestation) before performing MRI. This is partly a precautionary measure but also before then the size of the fetus and amount of movement limits the usefulness of the scan.
 
 % -------------------------- %
-% ---- Super Resolution ---- %
+% ---- Super-Resolution ---- %
 % -------------------------- %
 \newpage
-\section{Super Resolution}\label{background:superresolution}
+\section{Super-Resolution}\label{background:superresolution}
 \sectionreference{Adapted from \cite{superresolution2} and \cite{superresolution1}}
 
 One of the challenges with using MRI for fetal imaging is the resolution that is achievable with current scanners. A typical slice thickness when performing a scan on a fetal brain for example is 3mm, which is set to provide a good balance between resolution and noise. Comparing this to the brain, which may only be 50mm, limits the diagnostic potential.
 
-Super resolution is a technique that is designed to address this issue. The idea behind super resolution is to construct a higher resolution image by combining information from multiple lower resolution images. A similar approach is used in stereoscopic 3D where the information from two images taken from different perspectives are combined to create one 3D image.
+Super-resolution is a technique that is designed to address this issue. The idea behind super-resolution is to construct a higher resolution image by combining information from multiple lower resolution images. A similar approach is used in stereoscopic 3D where the information from two images taken from different perspectives are combined to create one 3D image.
 
-In the case of super resolution two (or more) images are taken such that the translation between them known to sub-pixel accuracy. Having images where the pixels are interleaved in this way allows a higher resolution image to be constructed by interpolation of these images.
+In the case of super-resolution two (or more) images are taken such that the translation between them known to sub-pixel accuracy. Having images where the pixels are interleaved in this way allows a higher resolution image to be constructed by interpolation of these images.
 
 \begin{figure}[h]
     \centering
@@ -63,8 +63,8 @@ In the case of super resolution two (or more) images are taken such that the tra
     \label{fig:superresolution}
 \end{figure}
 
-\subsection*{Intuitive Super Resolution Overview}
-The most simple form of super resolution follows three steps:
+\subsection*{Intuitive Super-Resolution Overview}
+The most simple form of super-resolution follows three steps:
 
 \begin{enumerate}
 	\item Registration
@@ -97,7 +97,7 @@ These processes can be represented by a series of transformations that can be ap
 & n \text{ - noise} \nonumber
 \end{align*}
 
-The task of image super resolution is given a number of these such images $y$, can we reverse the process to find $x$, our high resolution version.
+The task of image super-resolution is given a number of these such images $y$, can we reverse the process to find $x$, our high resolution version.
 
 Finding $M$ is a case of estimating the movement between each of the images that we have. Depending on the application finding these translations can be a very difficult task; in the case of MRI we are dealing with a controlled environment and so it is possible to take images with a known relationship to each other. If the target remains stationary, this makes finding the translations straight-forward, however dealing with movement (such as breathing) makes this a significantly harder task.
 
@@ -117,7 +117,7 @@ There are a number of different processes that are used to try and reverse this 
 % ------ Uncertainty ------ %
 % ------------------------- %
 \newpage
-\section{Uncertainty in Super Resolution}\label{background:uncertainty}
+\section{Uncertainty in Super-Resolution}\label{background:uncertainty}
 Three different types of uncertainty have been considered, though with different reconstruction algorithms there may be other metrics that can be extracted.
 
 \begin{enumerate}
